outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval319702861808588334_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" factor, calculated as the average of all distances from the candidate node to unvisited nodes, to balance exploration and exploitation. The weight for local vs. global distance is adjusted based on remaining nodes, while the importance factor is weighted by the inverse of the remaining nodes to emphasize exploration early.}
              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" factor, calculated as the average of all distances from the candidate node to unvisited nodes, to balance exploration and exploitation. The weight for local vs. global distance is adjusted based on remaining nodes, while the importance factor is weighted by the inverse of the remaining nodes to emphasize exploration early.}
              ^
SyntaxError: unterminated string literal (detected at line 1)
